2005-07-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Update to 2.6.1.

	* site/news.ihtml: Mention 2.6.1 works on DOS-based windows.

	* site/install/stable.ihtml: Update mingw links.

2005-07-18  Jean-Charles Malahieude <lilyfan@wanadoo.fr>

	* fr/index.html : upate to rev. 1.233
	* fr/install/index.html : update to rev. 1.38
	* fr/about/faq.html : new translated file

2005-07-20  Heikki Junes <hjunes@cc.hut.fi>

	* newweb.css: optimize for a 800x600 screen, increases printability 
	when 'fit to page' is not set and readability in wide screens.

2005-07-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: 2.6.1 for macos and autopackage.

2005-07-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: url fix.

2005-07-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): announce 2.7.0

	* site/index.html: add 2.7 table.

	* site/install/devel.ihtml: add 2.7

2005-06-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/documentation.html: add 2.7

2005-07-03  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/install/stable.ihtml: Add Slackware.

2005-06-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/index.html: Use old=oud, ancient=antiek.

2005-06-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/older-versions.html: Fix: Warty iso Hoary 2.2.6.

	* site/install/old.ihtml: Add Hoary: 2.4.5.  Move Fedora and Red
	Hat into alphabetic order.

	* site/news.ihtml (href): Typo.

2005-06-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/news.ihtml (href): Bugfix: Linux (x86).  Remove stray </dd>

2005-06-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html: remove ghostscript notice.

	* site/install/stable.ihtml: 2.6.0-2.dmg.

2005-06-27  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/index.html: update links.
	
	* fr/install/index.html: translation of the new file.
	
	* fr/install/using.html: update links.

2005-06-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
