@@ -1,3 +1,8 @@
+2005-07-21  Heikki Junes <hjunes@cc.hut.fi>
+
+	* newweb.css: revert 800x600 change, center instead and decrease
+	size to a bit less than 100% -- prevents horizontal scrollbar.
+
 2005-07-20  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/index.html: Update to 2.6.1.
